k8s/RBAC-SA.yaml
---
# Namespace for Passman
apiVersion: v1
kind: Namespace
metadata:
  name: passman
